--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,74 @@
-cmake_minimum_required(VERSION 3.10)
-project(calc VERSION 0.1)
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+cmake_minimum_required(VERSION 3.16)
 
-add_subdirectory(libcalc)
-list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/libcalc")
-add_executable(calc main.cxx)
-target_link_libraries(calc PUBLIC libcalc)
-target_include_directories(calc PUBLIC
-        ${EXTRA_INCLUDES}
+project(gitle-calculator VERSION 0.1 LANGUAGES CXX)
+
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+
+set(PROJECT_SOURCES
+        main.cpp
+        mainwindow.cpp
+        mainwindow.h
+        mainwindow.ui
+        libcalc.cpp
+        libcalc.h
+
 )
 
-include(FetchContent)
-FetchContent_Declare(
-        googletest
-        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-)
-FetchContent_MakeAvailable(googletest)
+if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
+    qt_add_executable(gitle-calculator
+        MANUAL_FINALIZATION
+        ${PROJECT_SOURCES}
+    )
+# Define target properties for Android with Qt 6 as:
+#    set_property(TARGET gitle-calculator APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
+# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
+else()
+    if(ANDROID)
+        add_library(gitle-calculator SHARED
+            ${PROJECT_SOURCES}
+        )
 
-enable_testing()
+# Define properties for Android with Qt 5 after find_package() calls as:
+#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
+    else()
+        add_executable(gitle-calculator
+            ${PROJECT_SOURCES}
+        )
+    endif()
+endif()
 
-add_executable(
-        main_test
-        main_test.cxx
-)
-target_link_libraries(
-        main_test
-        GTest::gtest_main
-        libcalc
+target_link_libraries(gitle-calculator PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+
+# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
+# If you are developing for iOS or macOS you should consider setting an
+# explicit, fixed bundle identifier manually though.
+if(${QT_VERSION} VERSION_LESS 6.1.0)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.gitle-calculator)
+endif()
+set_target_properties(gitle-calculator PROPERTIES
+    ${BUNDLE_ID_OPTION}
+    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
+    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
+    MACOSX_BUNDLE TRUE
+    WIN32_EXECUTABLE TRUE
 )
 
-include(GoogleTest)
-gtest_discover_tests(main_test)
+include(GNUInstallDirs)
+install(TARGETS gitle-calculator
+    BUNDLE DESTINATION .
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
+
+if(QT_VERSION_MAJOR EQUAL 6)
+    qt_finalize_executable(gitle-calculator)
+endif()
